# SHAP-PROJECT

./: README.md  pyproject.toml
SHAP Regression Case Study/: Regression_shap.ipynb
Shap_introduction/: shap-intro-demo.ipynb  shap_background_data.ipynb
